# money-tracker

backend/: .gitignore  README.md  package-lock.json  package.json
backend/lib/: backend-stack.ts
backend/lib/lambdas/: README.md
backend/lib/lambdas/createAccessToken/: Cargo.toml
backend/lib/lambdas/createAccessToken/src/: main.rs
backend/lib/lambdas/getLink/: Cargo.toml
backend/lib/lambdas/getLink/src/: main.rs
backend/lib/lambdas/sendWeeklyReport/: Cargo.toml
backend/lib/lambdas/sendWeeklyReport/src/: main.rs
frotnend/money-tracker/: package-lock.json  package.json
frotnend/money-tracker/src/: App.js  Link.js
