[package]
name = "createAccessToken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
serde = "1.0.188"
serde_json = "1.0.107"
uuid = { version="1.4.0", features=["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
tokio = {version = "1", features = ["full"]}
aws-sdk-dynamodb = "0.33.0"
aws-config = "0.56.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
