[package]
name = "sendWeeklyReport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
dotenv = "0.15.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = {version = "1", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"
